fixed oneai collapse panel bug and updated inputbox ui

--- a/assets/oneai/style.css
+++ b/assets/oneai/style.css
@@ -1,6 +1,6 @@
 #user-input-box {
 	border-radius: 12px;
-	padding-left: 9px;
+	/* padding-left: 9px; */
 }
 	
 
